@@ -1,0 +1,3 @@
+#include "syscalls.h"
+
+syscall(close_range,close_range)
