@@ -21,6 +21,7 @@
   add freopen64
   add wcsnlen
   various printf fixes (Gabriel Ravier)
+  add close_range (Guilherme Janczak)
 
 0.34:
   move stpcpy from libcompat to lib as it is now part of POSIX (Enrico Scholz)
